支持嵌套行为